--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="nav">
       <ul>
         <li><a href="" style="text-decoration:none;">ホーム</a></li>
-        <li><a href="" style="text-decoration:none;">学会概要</a></li>
-        <li><a href="" style="text-decoration:none;">プログラム</a></li>
+        <li><a href="about.html" style="text-decoration:none;">学会概要</a></li>
+        <li><a href="program.html" style="text-decoration:none;">プログラム</a></li>
         <li><a href="" style="text-decoration:none;">参加・発表登録</a></li>
         <li><a href="" style="text-decoration:none;">アクセス</a></li>
       </ul>
