--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="" style="text-decoration:none;">ホーム</a></li>
         <li><a href="https://github.com/coi-conference/coi-conference.github.io/blob/master/about.html" style="text-decoration:none;">学会概要</a></li>
-        <li><a href="/program.html" style="text-decoration:none;">プログラム</a></li>
+        <li><a href="https://github.com/coi-conference/coi-conference.github.io/blob/master/program.html" style="text-decoration:none;">プログラム</a></li>
         <li><a href="" style="text-decoration:none;">参加・発表登録</a></li>
         <li><a href="" style="text-decoration:none;">アクセス</a></li>
       </ul>
