--- a/program.html
+++ b/program.html
@@ -15,9 +15,9 @@
 
     <div class="nav">
       <ul>
-        <li><a href="" style="text-decoration:none;">ホーム</a></li>
-        <li><a href="" style="text-decoration:none;">学会概要</a></li>
-        <li><a href="" style="text-decoration:none;">プログラム</a></li>
+        <li><a href="./index.html" style="text-decoration:none;">ホーム</a></li>
+        <li><a href="./about.html" style="text-decoration:none;">学会概要</a></li>
+        <li><a href="#" style="text-decoration:none;">プログラム</a></li>
         <li><a href="" style="text-decoration:none;">参加・発表登録</a></li>
         <li><a href="" style="text-decoration:none;">アクセス</a></li>
       </ul>
