Remove MEXT from a sponsor

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     	<div class="sponser">
     	<h3>［主催］</h3>
     	<p>主催　大阪大学COI拠点（第１回COI学会運営事務局）</p>
-      <p>共催　文部科学省、JST</p>
+      <p>共催　JST</p>
     	</section>
 
     </div>
