--- a/program.html
+++ b/program.html
@@ -18,8 +18,8 @@
         <li><a href="./index.html" style="text-decoration:none;">ホーム</a></li>
         <li><a href="./about.html" style="text-decoration:none;">学会概要</a></li>
         <li><a href="#" style="text-decoration:none;">プログラム</a></li>
-        <li><a href="" style="text-decoration:none;">参加・発表登録</a></li>
-        <li><a href="" style="text-decoration:none;">アクセス</a></li>
+        <li><a href="./register.html" style="text-decoration:none;">参加・発表登録</a></li>
+        <li><a href="./access.html" style="text-decoration:none;">アクセス</a></li>
       </ul>
     </div>
 
