--- a/about.html
+++ b/about.html
@@ -35,36 +35,34 @@
 
       <h2>第1回COI学会　開催概要</h2>
 
-      <div class="date">
     	<h3>［開催日時］</h3>
-    	<p>2018年10月25日（木）12:00 ~ 18:00</br>
-        　　　 10月26日（金）9:00 ~ 12:00</br>
-        （初日終了後に情報交換会（ナイトセッション）を予定）</p>
-    	</div>
+    	<p>（初日）　 2018年10月25日（木）12:00 ~ 18:00</br>
+         （2日目）　　 　 10月26日（金）9:00 ~ 12:00</br>
+         （ナイトセッション） 25日（木）18：30　～　21：00</p>
 
-    	<div class="place">
     	<h3>［学会会場］</h3>
-    	<p>大阪大学　中之島センター</br>
-    	   〒530-0005 大阪市北区中之島4-3-53</p>
-      </div>
+    	<p>大阪大学　中之島センター（〒530-0005 大阪市北区中之島4-3-53）</p>
 
-    	<div class="target">
     	<h3>［対象者］</h3>
-    	<p>COIプログラムに関係する（もしくは興味のある）研究者、URA等</p>
-      </div>
+    	<p>● COIプログラムに関係する（もしくは興味のある）研究者（学生も可）</br>
+        　（COI拠点関係者（URA等）も参加可能）</br>
+         ● 各拠点から必ず1名は招待講演者として発表</br>
+          （原則として、この1名はこれまでCOI2021会議や若手部会に参加したことのない“新規”の研究者とします。）</br>
+         ● 各若手ファンド採択課題について課題代表者1名は必ず発表</p>
 
-    	<div class="purpose">
-    	<h3>［学会概要］</h3>
+      <h3>［参加費］</h3>
+      <p>無料　［ナイトセッション（懇親会）は有料］</p>
+
+    	<h3>［会頭挨拶］</h3>
     	<p>文部科学省・JSTのセンター・オブ・イノベーション（COI）プログラムでは、「既存の分野や組織の壁を取り払い、企業や大学だけでは実現できない革新的なイノベーションを産学連携で実現するとともに、革新的なイノベーションを連続的に創出する「イノベーションプラットフォーム」を我が国に整備する」という目的が掲げられています。</p>
     	<p>2016年1月29日・30日に代々木・オリンピック記念青少年総合センターで開催された「第1回COI2021会議」を皮切りとして、全国18拠点の拠点間同士の連携・若手研究者の活性化を目的とした様々な活動が積極的に推進されてきました。第2回COI2021会議の終了後には、会議参加者からの提案を受けた新たな制度「COI20.0」が規定され、また若手研究者主体の合宿（若手合宿）も開催されるなどその活動は活発化しています。</p>
-    	<p>その一方、これまでの企画はCOIプログラムが目指す“社会実装”に重点が置かれており、研究者が有する有望な研究シーズの“事業化”に向けた支援は行われてきましたが、そもそも研究者がどのような専門で、どのような研究を行っているかについて、研究者同士でしっかりと議論する場も必要であると考えています。「研究者はやっぱり研究がしたい」という共通認識のもと、“研究”に焦点を置いたイベントとしてCOI若手学会を企画しました。</p>
-      </div>
+    	<p>その一方、これまでの企画はCOIプログラムが目指す“社会実装”に重点が置かれており、研究者が有する有望な研究シーズの“事業化”に向けた支援は行われてきましたが、そもそも各研究者がどのような専門で、どのような研究を行っているかについて、研究者同士でしっかりと議論する場も必要であると考えています。「研究者はやっぱり研究がしたい」という共通認識のもと、“研究”に焦点を置いたイベントとしてCOI学会を企画しました。当学会で新たに生まれた人脈・アイデアが、異分野間の共同研究開発力を底上げする形で、COIプログラムの目的達成に大きく貢献することを期待しています。</p>
+      <p align="right">大阪大学産業科学研究所</br>
+        山崎聖司</p>
 
-    	<div class="sponser">
     	<h3>［主催］</h3>
-    	<p>主催　大阪大学COI拠点（第１回COI学会運営事務局）</p>
+    	<p>主催　大阪大学COI研究推進機構</p>
       <p>共催　JST</p>
-    	</section>
 
     </div>
 
@@ -72,9 +70,9 @@
 
     <div class="footer">
       <p>お問い合わせ<br>
-        第1回COI学会 運営事務局（大阪大学COI拠点）<br>
+        大阪大学COI研究推進機構<br>
         〒567-0047　大阪府茨木市美穂ヶ丘8-1<br>
-        TEL:06-6879-4986　　　E-mail:coi-info@coistream.osaka-u.ac.jp</p>
+        TEL:06-6879-4988　　　E-mail:coi-kouhou@coistream.osaka-u.ac.jp</p>
     </div>
 
   </body>
