--- a/access.html
+++ b/access.html
@@ -34,12 +34,10 @@
     <div class="access">
       <div class="access-word">
       <h2>会場までのアクセス</h2>
-      京阪中之島線 中之島駅より 徒歩約５分<br>
-	　　阪神本線 福島駅より 徒歩約９分<br>
-	　　JR東西線 新福島駅より 徒歩約９分<br>
-	　　JR環状線 福島駅より 徒歩約１２分<br>
-	　　地下鉄四つ橋線 肥後橋駅より 徒歩約１０分<br>
-	　　地下鉄御堂筋線 淀屋橋駅より 徒歩約１６分<br>
+      <p>大阪大学　中之島センター<br>
+        〒530-0005　大阪市北区中之島4-3-53</br>
+        TEL 06-6444-2100</br>
+        FAX 06-6444-2338</p>
     	</div>
 
       <div class="access-map">
