--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
         <li><a href="./index.html" style="text-decoration:none;">ホーム</a></li>
         <li><a href="./about.html" style="text-decoration:none;">学会概要</a></li>
         <li><a href="./program.html" style="text-decoration:none;">プログラム</a></li>
-        <li><a href="./register.html" style="text-decoration:none;">参加・発表登録</a></li>
+        <li><a href="#" style="text-decoration:none;">参加・発表登録</a></li>
         <li><a href="./access.html" style="text-decoration:none;">アクセス</a></li>
       </ul>
     </div>
@@ -33,28 +33,24 @@
 
     <div class="register">
 
-      <h2>参加・発表申込</h2>
+      <h2>参加・発表登録</h2>
 
       <div class="presentation">
-    	<h3>［発表申込］</h3>
-    	<p>ご自身に関する情報を下記登録フォームにご記入ください。</br>
-　　　  また、自身の研究に関するアブストラクト（A41枚）を事前にご提出いただきます（9月上旬締切）。</br>
-　　　  なお、研究内容に関するポスター（A0）を当日までにご準備ください。</br>
-　　　（ちなみに講演内容はCOIプログラムでの研究内容に限りません。）</p>
-　　　</div>
-
-　　　 <div class="presentation-button">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKEO47bRUUv2TpNGFmFhU5ctJlc7i2ULPMEzePr9ksoEV3Fw/viewform" style="text-decoration:none;">発表登録</a>
+    	<h3>［発表登録］</h3>
+    	<p>ご自身に関する情報を下記フォームにご記入ください。</br>
+        また、自身の研究に関するアブストラクト（A41枚、様式後日掲載）を事前にご提出いただきます（9月上旬締切）。</br>
+        なお、研究内容に関するポスター（A0）を当日までにご準備ください。</br>
+        （講演内容はCOIプログラムでの研究内容に限りません。）</p>
+      <p>発表登録は<a href="https://docs.google.com/forms/d/e/1FAIpQLSeKEO47bRUUv2TpNGFmFhU5ctJlc7i2ULPMEzePr9ksoEV3Fw/viewform" style="text-decoration:none;">こちら</a>から</p>
+      <p>アブストラクトの提出は<a href="https://docs.google.com/forms/d/e/1FAIpQLScGfjtKxxZJ0S_qXkUe9u0S4rUQ9Sd4TdHVgaxKZnzoVD2efQ/viewform" style="text-decoration:none;">こちら</a>から</p>
     	</div>
 
       <div class="participation">
-      <h3>［参加申込］</h3>
-      <p>ご自身に関する情報を下記登録フォームにご記入ください。</br>
-　　　</div>
+      <h3>［参加登録］</h3>
+      <p>ご自身に関する情報を下記フォームにご記入ください。</br>
+      <p>参加登録は<a href="https://docs.google.com/forms/d/e/1FAIpQLSeKEO47bRUUv2TpNGFmFhU5ctJlc7i2ULPMEzePr9ksoEV3Fw/viewform" style="text-decoration:none;">こちら</a>から<p>
+　    </div>
 
-　　　 <div class="participation-button">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKEO47bRUUv2TpNGFmFhU5ctJlc7i2ULPMEzePr9ksoEV3Fw/viewform" style="text-decoration:none;">参加登録</a>
-      </div>
 　  </div>
 
     <div class="clear"></div>
