--- a/program.html
+++ b/program.html
@@ -33,19 +33,19 @@
 
     <div class="program">
 
-      <h2>第1回COI学会　プログラム（詳細については随時更新予定）</h2>
+      <h2>第1回COI学会　プログラム（予定）</h2>
       <h3>［1日目］</h3>
       <p>◎12:00 - 12:10　開会挨拶</p>
       <p>◎12:10 - 12:20　概要説明</p>
       <p>◎12:20 - 13:00　Keynote Presentation</p>
       <p>◎13:00 - 15:30　招待講演（各拠点1名ずつ約8分）</p>
-      <p>◎15:45 - 17:00　一般講演①（ショートプレゼン約2分）</p>
-      <p>◎17:00 - 18:00　ポスターセッション①</p>
+      <p>◎15:40 - 16:30　一般講演①（ショートプレゼン約1分）</p>
+      <p>◎16:30 - 18:00　ポスターセッション①</p>
       </br>
       <h3>［2日目］</h3>
-      <p>◎ 9:00 - 10:30　一般講演②</p>
-      <p>◎10:40 - 11:40　ポスターセッション②</p>
-      <p>◎11:40 - 12:00　閉会挨拶</p>
+      <p>◎ 9:00 - 10:00　一般講演②</p>
+      <p>◎10:00 - 11:30　ポスターセッション②</p>
+      <p>◎11:30 - 12:00　閉会挨拶</p>
 
     </div>
 
@@ -53,9 +53,9 @@
 
     <div class="footer">
       <p>お問い合わせ<br>
-        第1回COI学会 運営事務局（大阪大学COI拠点）<br>
+        大阪大学COI研究推進機構<br>
         〒567-0047　大阪府茨木市美穂ヶ丘8-1<br>
-        TEL:06-6879-4986　　　E-mail:coi-info@coistream.osaka-u.ac.jp</p>
+        TEL:06-6879-4988　　　E-mail:coi-kouhou@coistream.osaka-u.ac.jp</p>
     </div>
 
   </body>
