--- a/program.html
+++ b/program.html
@@ -41,6 +41,7 @@
       <p>◎13:00 - 15:30　招待講演（各拠点1名ずつ約8分）</p>
       <p>◎15:40 - 16:30　一般講演①（ショートプレゼン約1分）</p>
       <p>◎16:30 - 18:00　ポスターセッション①</p>
+      <p>◎18:30 - 21:00　交流会・ナイトセッション（有料）</p>
       </br>
       <h3>［2日目］</h3>
       <p>◎ 9:00 - 10:00　一般講演②</p>
